# python-sandbox

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HOW_IT_WORKS.md  LICENSE  README.md  index.yaml
.github/workflows/: build-code-interpreter.yml  ci.yml  docker-build-push.yml  helm-release.yml
code-interpreter/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
code-interpreter/app/: app_configs.py  image_ref.py  logging_config.py  main.py
code-interpreter/app/api/: routes.py
code-interpreter/app/models/: schemas.py
code-interpreter/app/services/: executor_base.py  executor_docker.py  executor_factory.py  executor_kubernetes.py  file_storage.py
code-interpreter/docs/: KUBERNETES_BACKEND.md
code-interpreter/tests/e2e/: test_basic_flow.py  test_concurrent_execute.py
code-interpreter/tests/integration_tests/: test_binary_file_integrity.py  test_data_stack.py  test_file_storage.py  test_file_support.py  test_health.py  test_hello_world.py  test_image_ref.py  test_interactive_mode.py  test_kubernetes_streaming.py  test_logging_config.py  test_session_bash_docker.py  test_session_bash_kubernetes.py  test_session_bash_routes.py  test_sessions_docker.py  test_sessions_kubernetes.py  test_sessions_routes.py  test_streaming.py
executor/: Dockerfile  README.md  pyproject.toml
kubernetes/code-interpreter/: Chart.yaml  README.md  values.yaml
kubernetes/code-interpreter/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
